--- a/app/src/main/res/layout/main_navigation_header.xml
+++ b/app/src/main/res/layout/main_navigation_header.xml
@@ -23,7 +23,7 @@
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+            app:layout_constraintTop_toBottomOf="@+id/profile_image" />
 
         <TextView
             android:id="@+id/aboutme_tv"
@@ -40,7 +40,7 @@
             app:layout_constraintTop_toBottomOf="@+id/username_tv" />
 
         <ImageView
-            android:id="@+id/imageView2"
+            android:id="@+id/profile_image"
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:layout_marginBottom="72dp"
@@ -48,7 +48,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:scaleType="centerCrop"
-            android:src="@drawable/careers"
+            android:src="@drawable/default_profile"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
