--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/colorPrimary">
 
 
 
@@ -86,7 +87,6 @@
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
         android:layout_marginTop="?attr/actionBarSize"
-        app:headerLayout="@layout/main_navigation_header"
         >
 
 
