--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -19,7 +19,7 @@
         android:layout_marginStart="72dp"
         android:layout_marginTop="32dp"
         android:background="@drawable/rounded_signup"
-        android:text="Button"
+        android:text="@string/log_in"
         android:textColor="#dadada"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
