--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -43,6 +43,7 @@
             android:scaleType="centerCrop"
             app:civ_border_width="2dp"
             app:civ_border_color="@color/light_text_color"
+            android:src="@drawable/default_profile"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
