--- a/app/src/main/res/layout/main_resume_item.xml
+++ b/app/src/main/res/layout/main_resume_item.xml
@@ -1,19 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="100dp"
-    android:layout_height="match_parent"
-    android:background="#ffffff"
-    android:elevation="2dp"
+<de.hdodenhof.circleimageview.CircleImageView
+    android:id="@+id/profile_image"
+    android:layout_width="80dp"
+    android:layout_height="80dp"
     android:layout_margin="4dp"
-    >
+    android:scaleType="centerCrop"
+    app:civ_border_width="2dp"
+    app:civ_border_color="@color/light_text_color"
+    android:contentDescription="TODO"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto" />
 
-    <ImageView
-        android:id="@+id/profile_image"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="4dp"
-        android:scaleType="centerCrop"
-        android:contentDescription="TODO" />
-
-</FrameLayout>
