--- a/app/src/main/res/layout/quiz_fragment.xml
+++ b/app/src/main/res/layout/quiz_fragment.xml
@@ -8,13 +8,12 @@
     >
 
     <android.support.design.widget.FloatingActionButton
+        android:id="@+id/end_session"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical|end"
-        android:layout_marginTop="6dp"
+        android:layout_gravity="bottom|end"
+        android:layout_marginBottom="8dp"
         app:fabSize="mini"
-        app:layout_anchor="@id/app_bar"
-        app:layout_anchorGravity="bottom|end"
         android:layout_marginEnd="8dp"
         android:src="@drawable/end_session_icon"
         />
