--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,7 +9,7 @@
     <color name="body_text_color">#113978</color>
     <color name="transform">#d91e1e1e</color>
     <color name="white">#ffffff</color>
-
+    <color name="red">#6b0000</color>
 
 
 </resources>
