--- a/app/src/main/res/layout/main_menu_item.xml
+++ b/app/src/main/res/layout/main_menu_item.xml
@@ -19,7 +19,8 @@
         android:elevation="@dimen/image_elevation"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:contentDescription="@string/menu_icon" />
 
     <TextView
         android:id="@+id/title_main_menu"
