--- a/app/src/main/res/layout/main_navigation_header.xml
+++ b/app/src/main/res/layout/main_navigation_header.xml
@@ -17,7 +17,7 @@
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:text="Username"
+            android:text="@string/username"
             android:textColor="#ffffff"
             android:textSize="16sp"
             android:textStyle="bold"
@@ -32,7 +32,8 @@
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:text="About Me"
+            android:text="@string/about_me"
+            android:visibility="gone"
             android:textColor="#bcbcbc"
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
