--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -36,7 +36,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/login_icon" />
+        app:srcCompat="@drawable/login_icon"
+        android:contentDescription="@string/user_profile" />
 
     <TextView
         android:id="@+id/textView3"
