--- a/app/src/main/res/layout/main_resume_item.xml
+++ b/app/src/main/res/layout/main_resume_item.xml
@@ -7,7 +7,7 @@
     android:scaleType="centerCrop"
     app:civ_border_width="2dp"
     app:civ_border_color="@color/light_text_color"
-    android:contentDescription="TODO"
+    android:contentDescription="@string/user_profile"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto" />
 
