--- a/app/src/main/res/layout/widget_resume_row.xml
+++ b/app/src/main/res/layout/widget_resume_row.xml
@@ -13,7 +13,8 @@
         android:layout_height="40dp"
         android:layout_gravity="start|center_vertical"
         android:layout_marginStart="8dp"
-        android:src="@drawable/default_profile" />
+        android:src="@drawable/default_profile"
+        android:contentDescription="@string/user_profile" />
 
     <TextView
         android:id="@+id/widget_row_title"
