--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:transitionGroup="false"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:background="@color/colorPrimary">
 
@@ -47,7 +48,9 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/main_menu_recycler"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:transitionGroup="false"
+            >
 
         </android.support.v7.widget.RecyclerView>
 
@@ -57,6 +60,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
+            android:transitionGroup="false"
             android:elevation="8dp">
 
         </android.support.v7.widget.RecyclerView>
