--- a/app/src/main/res/layout/activity_banque_misr.xml
+++ b/app/src/main/res/layout/activity_banque_misr.xml
@@ -3,7 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".BanqueMisrActivity">
+    tools:context=".BanqueMisrActivity"
+    android:transitionGroup="false"
+    >
 
 
     <FrameLayout
@@ -11,6 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/colorPrimary"
+        android:transitionGroup="false"
         >
 
     </FrameLayout>
