--- a/app/src/main/res/layout/resume_navigation.xml
+++ b/app/src/main/res/layout/resume_navigation.xml
@@ -16,6 +16,8 @@
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="40dp"
+            app:civ_border_width="2dp"
+            app:civ_border_color="@color/light_text_color"
             android:src="@drawable/default_profile"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
