--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -15,8 +15,8 @@
         android:layout_width="0dp"
         android:layout_height="60dp"
         android:layout_marginBottom="8dp"
-        android:layout_marginEnd="72dp"
-        android:layout_marginStart="72dp"
+        android:layout_marginEnd="@dimen/submit_sign_activity_margin"
+        android:layout_marginStart="@dimen/submit_sign_activity_margin"
         android:layout_marginTop="32dp"
         android:background="@drawable/rounded_signup"
         android:text="@string/log_in"
@@ -43,8 +43,8 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginEnd="@dimen/sign_activity_margin"
+        android:layout_marginStart="@dimen/sign_activity_margin"
         android:layout_marginTop="8dp"
         android:text="@string/enter_your_details"
         android:textColor="#dadada"
@@ -72,6 +72,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="@dimen/sign_activity_margin"
+        android:layout_marginStart="@dimen/sign_activity_margin"
         android:orientation="vertical"
         app:layout_constraintTop_toBottomOf="@+id/textView4">
 
@@ -79,10 +81,8 @@
             android:id="@+id/et_email"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:layout_marginEnd="32dp"
-            android:layout_marginLeft="32dp"
-            android:layout_marginRight="32dp"
-            android:layout_marginStart="32dp"
+            android:layout_marginEnd="@dimen/sign_activity_margin"
+            android:layout_marginStart="@dimen/sign_activity_margin"
             android:layout_marginTop="8dp"
             android:background="#313540"
             android:hint="@string/email"
@@ -95,10 +95,8 @@
             android:id="@+id/et_password"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:layout_marginEnd="32dp"
-            android:layout_marginLeft="32dp"
-            android:layout_marginRight="32dp"
-            android:layout_marginStart="32dp"
+            android:layout_marginEnd="@dimen/sign_activity_margin"
+            android:layout_marginStart="@dimen/sign_activity_margin"
             android:layout_marginTop="16dp"
             android:background="#313540"
             android:hint="@string/password"
