--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -5,6 +5,7 @@
     android:id="@+id/quiz_pager"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorPrimaryDark"
     tools:context=".QuizActivity">
 
 </android.support.v4.view.ViewPager>
