--- a/app/src/main/res/layout/activity_resume.xml
+++ b/app/src/main/res/layout/activity_resume.xml
@@ -41,8 +41,9 @@
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp">
+            android:layout_marginEnd="@dimen/main_activity_margin"
+            android:layout_marginStart="@dimen/main_activity_margin"
+            >
 
 
             <LinearLayout
