--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -14,8 +14,8 @@
         android:layout_width="0dp"
         android:layout_height="60dp"
         android:layout_marginBottom="8dp"
-        android:layout_marginEnd="72dp"
-        android:layout_marginStart="72dp"
+        android:layout_marginEnd="@dimen/submit_sign_activity_margin"
+        android:layout_marginStart="@dimen/submit_sign_activity_margin"
         android:layout_marginTop="32dp"
         android:background="@drawable/rounded_signup"
         android:text="@string/sign_up"
@@ -29,8 +29,8 @@
         android:id="@+id/profile_image"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginEnd="@dimen/sign_activity_margin"
+        android:layout_marginStart="@dimen/sign_activity_margin"
         android:layout_marginTop="50dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -42,8 +42,8 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginEnd="@dimen/sign_activity_margin"
+        android:layout_marginStart="@dimen/sign_activity_margin"
         android:layout_marginTop="8dp"
         android:text="@string/enter_your_details"
         android:textColor="#dadada"
@@ -56,8 +56,8 @@
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginEnd="@dimen/sign_activity_margin"
+        android:layout_marginStart="@dimen/sign_activity_margin"
         android:layout_marginTop="8dp"
         android:text="@string/welcome_to_our_app"
         android:textColor="#9e9e9e"
@@ -71,6 +71,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="@dimen/sign_activity_margin"
+        android:layout_marginStart="@dimen/sign_activity_margin"
         android:orientation="vertical"
         app:layout_constraintTop_toBottomOf="@+id/textView4">
 
