--- a/app/src/main/res/layout/quiz_fragment.xml
+++ b/app/src/main/res/layout/quiz_fragment.xml
@@ -21,6 +21,8 @@
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginStart="@dimen/main_activity_margin"
+        android:layout_marginEnd="@dimen/main_activity_margin"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         android:background="@color/colorPrimaryDark"
         >
