--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,7 @@ Refer to App Widget Documentation for margin information
 http://developer.android.com/guide/topics/appwidgets/index.html#CreatingLayout
     -->
     <dimen name="widget_margin">8dp</dimen>
+    <dimen name="main_activity_margin">8dp</dimen>
+    <dimen name="sign_activity_margin">8dp</dimen>
+    <dimen name="submit_sign_activity_margin">70dp</dimen>
 </resources>
